<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.popularmoviesstage1.DetailActivity">

        <ImageView
            android:id="@+id/detail_movie_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_image_desc"
            app:layout_constraintHorizontal_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/detail_overview_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/plot_synopsis_label"
            android:textColor="@color/colorDarkRed"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_movie_poster"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/detail_overview_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="8dp"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="24dp"
            android:paddingRight="24dp"
            android:text="@string/tv_dummy_data"
            android:textColor="@color/colorDarkGrey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="@+id/detail_overview_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview_label"
            app:layout_constraintVertical_bias="0.0" />


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintBottom_toBottomOf="@+id/detail_movie_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_movie_poster"
            app:layout_constraintTop_toTopOf="@+id/detail_movie_poster">

            <TextView
                android:id="@+id/detail_title_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/original_title_label"
                android:textColor="@color/colorDarkRed"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="124dp" />

            <TextView
                android:id="@+id/detail_title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingEnd="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="16dp"
                android:paddingStart="8dp"
                android:singleLine="false"
                android:text="@string/tv_dummy_data"
                android:textColor="@color/colorDarkGrey"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="161dp" />

            <TextView
                android:id="@+id/detail_rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/user_rating_label"
                android:textColor="@color/colorDarkRed"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/detail_rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_dummy_data"
                android:textColor="@color/colorDarkGrey"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="51dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/detail_release_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/release_date_label"
                android:textColor="@color/colorDarkRed"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="139dp"
                tools:layout_editor_absoluteY="81dp" />

            <TextView
                android:id="@+id/detail_release_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_dummy_data"
                android:textColor="@color/colorDarkGrey"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="147dp"
                tools:layout_editor_absoluteY="95dp"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_fav_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorDarkRed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@android:drawable/star_on" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>